<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmobiliariakevin.ui.inicio.InicioFragment"
        android:label="@string/Inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliariakevin.ui.perfil.PerfilFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliariakevin.ui.inmuebles.InmueblesFragment"
        android:label="@string/Inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleFragment"
            app:destination="@id/inmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliariakevin.ui.inquilinos.InquilinosFragment"
        android:label="@string/Inquilinos"
        tools:layout="@layout/inquilinos_fragment" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmobiliariakevin.ui.contratos.ContratosFragment"
        android:label="@string/Contratos"
        tools:layout="@layout/contratos_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliariakevin.ui.logout.LogoutFragment"
        android:label="@string/Logout"
        tools:layout="@layout/logout_fragment" />
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.example.inmobiliariakevin.ui.inmuebles.InmuebleFragment"
        android:label="inmueble_fragment"
        tools:layout="@layout/inmueble_fragment" >
        <action
            android:id="@+id/action_inmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
</navigation>